Refactor code for improved readability and maintainability; update Docker and Vault configurations for enhanced functionality.